namespace TimeLedger.Core.Services;

public static class AuthSession
{
    public const string UserIdKey = "Auth.UserId";
    public const string UserEmailKey = "Auth.UserEmail";
    public const string UserNameKey = "Auth.UserName";
}

