@startuml
left to right direction
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam nodesep 45
skinparam ranksep 55
hide empty members

title TimeLedger - Architectural Pattern (Iteration 2)

package "Pattern (Representative Event Slice)" {
  class EventPageModel <<Razor Page>>
  class EventService <<Service>>
  interface IEventRepository <<Port>>
  class EventRepository <<SQL Adapter>>
  class Event <<Domain Model>>

  EventPageModel --> EventService : uses
  EventService ..> IEventRepository : depends on abstraction
  IEventRepository <|.. EventRepository : implements
  EventService --> Event : business rules + mapping
  EventRepository --> Event : persists
}

package "Composition Root" {
  class Program <<composition root>>
  Program ..> IEventRepository : DI binding
  Program ..> EventService : DI registration
}

package "Deviations / Exceptions" {
  class UserService <<Service>>
  interface IUserRepository <<Port>>
  class UserRepository <<SQL Adapter>>
  class AuthSession <<static>>
  class AccountPageModel <<Razor Page>>
  class InMemoryEventRepository <<Alt Adapter>>

  UserService ..> IUserRepository : same core pattern
  IUserRepository <|.. UserRepository : implements

  AccountPageModel --> UserService : uses
  AccountPageModel ..> AuthSession : reads/writes session keys

  IEventRepository <|.. InMemoryEventRepository : optional implementation
}

note right of AccountPageModel
Uses session-based auth state
instead of JWT/Identity pipeline.
end note

note bottom of Event
Deviation from intended multi-user model:
Event currently has no UserId/Owner link,
so ownership filtering is not enforced yet.
end note

legend right
Solid arrow   = direct usage/call
Dashed arrow  = dependency via abstraction / DI
Triangle head = interface implementation
endlegend

@enduml
